@@ -1,3 +1,4 @@
+Sim Sharing: send startDrag/endDrag for non-contact ammeter, see #3497
 Sim Sharing: renamed "ammeter" => "nonContactAmmeter"
 Renamed VirtualAmmeterNode => NonContactAmmeterNode
 Sim Sharing: Added messages for moving the ammeter probe (limit to every 500ms), see #3497
